- fixed switch back to login when GAMS Engine session is expired
- fixed continue resume when GAMS Engine session is expired
- added transition page after login to GAMS Engine
- fixed visual issues on the welcome page
- fixed the min-size restriction that broke the "Getting started" column
- fixed crash and load behavior of reference viewer when reference file is partially or incorrectly written

Version 1.18.1
==================
- fixed crash when running GAMS Engine without efi-file
- fixed double-click word selection, wrong selection when scrolling, wrong selection anchor
- fixed palette issues in process log view, e.g. while text on white background for text selections
- fixed find in project processes only open files
- fixed find in project also processed excluded files, like gdx and zip

Version 1.18.0
==================
- added maximum lines for syntax highlighting to the settings
- added support for excludes schema in connect editor
- added support for anyof schema in connect editor
- added `--log` and `--log-file` command line option to create a Studio log file
- fixed the display of the schema definition of a list of oneof_schema dict in connect editor
- fixed a crash inside the GDX Viewer when loading a file with invalid UELs
- fixed empty recovery file and added backup file after recovery
- fixed wrong search result after replace in multiple files
- fixed prevent the rewrite of all gsp files on startup
- fixed color theme issues for dark theme
- improved delay creation of workspace directory until necessary, to give the user the opportunity to set the prefered workspace location
- upgraded to Qt 6.7.1

Version 1.17.6
==================
- upgraded to Qt 6.6.3
- improved set TLS 1.2 as minimum requirement for HTTPS connections

Version 1.17.5
==================
- fixed prevent Alt keys from closing GDX Viewer filter dialogs

Version 1.17.4
==================
- fixed font initialization error
- fixed crash on close a tab with active block edit selection