@@ -383,12 +383,12 @@ void OAIHttpRequestWorker::execute(OAIHttpRequestInput *input) {
     }
     if (reply != nullptr) {
         reply->setParent(this);
-        connect(reply, &QNetworkReply::finished, [this, reply] {
+        connect(reply, &QNetworkReply::finished, this, [this, reply] {
             on_reply_finished(reply);
         });
     }
     if (timeOutTimer.interval() > 0) {
-        QObject::connect(&timeOutTimer, &QTimer::timeout, [this, reply] {
+        QObject::connect(&timeOutTimer, &QTimer::timeout, this, [this, reply] {
             on_reply_timeout(reply);
         });
         timeOutTimer.start();
