@@ -30,6 +30,7 @@
 #include <QSslConfiguration>
 
 #include "networkmanager.h"
+#include "logger.h"
 
 using namespace OpenAPI;
 
@@ -213,6 +214,14 @@ EngineManager::EngineManager(QObject* parent)
     // ===== initialize Job API =====
 
     mJobsApi->setNetworkAccessManager(mNetworkManager);
+
+    // TODO(JM) discuss this
+    // Would be convenient at the end of  OAIHttpRequestWorker::execute ...
+//    connect(reply, &QNetworkReply::downloadProgress, this, &OAIHttpRequestWorker::downloadProgress);
+    // pass though OAIJobApi and use here
+//    connect(mJobsApi, &OAIJobsApi::downloadProgress, this, [this](qint64 bytesReceived, qint64 bytesTotal) {
+//        DEB() << "progress " << bytesReceived << " from " << bytesTotal;
+//    });
 
     connect(mJobsApi, &OAIJobsApi::createJobSignal, this,
             [this](const OAIMessage_and_token &summary) {
